--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "acme",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.20.2",
+    "npm": "8.19.4"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,10 +15,12 @@
   "dependencies": {
     "@react-three/drei": "^9.80.3",
     "@react-three/fiber": "^8.13.7",
+    "@tryghost/content-api": "^1.11.16",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@types/three": "^0.155.0",
+    "@types/tryghost__content-api": "^1.3.11",
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
